# mafia-game

./: .gitignore  CMakeLists.txt  README.md  clone_thirdparty.sh  names.txt
include/: Logger.h  MySharedPtr.h
src/: main.cpp
